1999-08-12  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>

	* FvwmPager/x_pager.c (MoveResizePagerView): fixed shrinking windows
	when pager was resized

1999-08-11  Hippo

	* FvwmPager/* Mini-windows drawn in 3D if *FvwmPagerWindowColorsets used

1999-08-11  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/FormFvwmSetup.in: Fix installed config file names.

1999-08-10  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>

	* FvwmAuto/FvwmAuto.c (main): fixed FvwmAuto

1999-08-09  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>

	* FvwmPager/FvwmPager.c: Disable SloppyFocus by default
	
	* FvwmPager/FvwmPager.c (ParseOptions): 
	* FvwmPager/x_pager.c (HandleEnterNotify): 
	(DispatchEvent): 
	* FvwmPager/FvwmPager.h: new option 'FvwmPagerSloppyFocus': transfer
	focus whenever a pager subwindow is entered with the mouse

1999-08-08  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmPager/x_pager.c (HandleExpose):
	(GetWindowColors):
	(change_colorset): handle change of window foreground at run time with
	colorsets

	* FvwmPager/FvwmPager.c (list_colorset): use PeekToken instead of
	GetNextToken
	(NewPagerStringItem): initialise colorsets in desk specific settings
	(ParseOptions): fixed several coredumps (accessing item->next->...
	althought item is newly created and thus item->next == NULL)

	* FvwmTheme/FvwmTheme.1: fixed typo

1999-08-06  Hippo

	* FvwmWinList/FvwmWinList.c: uses XTranslateCoordinates for positioning

1999-08-05  Brad Giaccio

	* FvwmPager/*: added new config option *FvwmPagerWindowColorsets
	* FvwmIconMan/*: added colorset support

1999-08-05  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>

	* FvwmForm/FvwmForm.c:
	* FvwmForm/FvwmForm.h: moved colorset statics to .c file

1999-08-04  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>

	* FvwmAuto/FvwmAuto.c (main): fixed raising when windows are switched
	before FvwmAuto raises the last window

1999-08-03  Mikhael Goikhman  <migo@homemail.com>

	* FvwmWharf/FvwmWharf.c: MaxSwallow limited to 64x64